--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
       <% data.forEach(item => { %>
       <tr>
       <td><%= item.longURL %></td>
-      <td><%= item.id %></td>
+      <td><a href="/<%= item.id%>" target="_blank"><%= item.id %></a></td>
       </tr>
       <% }) %> 
     </tbody>
