--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,10 @@
 </head>
 <body>
   <h1>hello Express</h1>
+  <form action="/" method="post">
+    <input type="url" name="longURL">
+    <input type="submit" value="전송">
+  </form>
   <table>
     <thead>
       <tr>
